--- a/index.html
+++ b/index.html
@@ -61,17 +61,10 @@
       <p><span id="stays"></span> Stays</p>
     </div>
 
-    <section class="container text-center">
-
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-
-          <div class="col">
-            <img src="https://images.unsplash.com/photo-1505873242700-f289a29e1e0f?ixlib=rb-1.2.1&auto=format&fit=crop&w=2255&q=80" alt="Helsinki"/>
-          </div>
-        </div>
+    <section class=" d-flex flex-wrap container text-center d-flex flex-column " id="rooms">
         <!-- Aqui van los cards, cada uno debe llevar la clase 'col' -->
-        
-      </div>
+
+    
     </section>
   </main>
 </body>
