--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
       <p><span id="stays"></span> Stays</p>
     </div>
 
-    <section class=" d-flex flex-wrap container text-center d-flex flex-column " id="rooms">
-        <!-- Aqui van los cards, cada uno debe llevar la clase 'col' -->
+    <section class="container text-center" >
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="rooms">
 
-    
+        <!-- Aqui van los cards, cada uno debe llevar la clase 'col' -->
+        
+      </div>
     </section>
   </main>
 </body>
 
 </html>
+
+
