--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <section class="container text-center" >
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="rooms">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 d-flex flex-col justify-content-evenly" id="rooms">
 
         <!-- Aqui van los cards, cada uno debe llevar la clase 'col' -->
         
@@ -74,3 +74,4 @@
 </html>
 
 
+<div class="align-content-center"></div>
