Some corrections made on the searching bar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <article class="d-flex rounded-4">
 
-      <div class="d-flex rounded-4 border border-success p-2 mb-2 border-opacity-25" class="container">
+      <div class="d-flex rounded-4 border border-success  mb-2 border-opacity-25 shadow-sm" class="container">
 
 
         <button class=" border-end bg-transparent p-3 m-0 cursor-text border-0 " type="button"
@@ -51,7 +51,7 @@
         <button class=" bg-transparent p-3 m-0 cursor-text border-0 " type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Add guests</button>
         <span
-          class="material-symbols-outlined text-danger p-3 pointer border-end bg-transparent p-3 m-0 cursor-text border-0"
+          class="material-symbols-outlined text-danger p-3 pointer border-start bg-transparent p-3 m-0 cursor-text border-0"
           type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
           search
         </span>
@@ -126,7 +126,7 @@
   </header>
   <main>
     <div class="d-flex mt-5 justify-content-between">
-      <h1 class="staysIn fs-3">Stays in
+      <h1 class="staysIn fs-3" id="staysIn">Stays in
         <!-- Aquí va el lugar -->
         <span id="place"></span>
       </h1>
